force-app/main/default/objects/ConstantesLead__c/ConstantesLead__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Variáveis padrão, de acesso global para o objeto Lead</description>
    <label>Constantes Lead</label>
</CustomObject>