force-app/main/default/objects/ConstantesLead__c/fields/AeronavePadraoCalculo__c.field-meta.xml
<CustomField>
    <fullName>AeronavePadraoCalculo__c</fullName>
    <description>Id da aeronave padrão a ser utilizada no cálculo da missão</description>
    <inlineHelpText>Id da aeronave padrão a ser utilizada no cálculo da missão</inlineHelpText>
    <label>Aeronave Padrão Cálculo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>