force-app/main/default/objects/ConstantesLead__c/fields/AssuntoTarefaConversao__c.field-meta.xml
<CustomField>
    <fullName>AssuntoTarefaConversao__c</fullName>
    <description>Assunto para tarefa de conversão de Lead</description>
    <label>Assunto da tarefa de conversão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>