force-app/main/default/objects/ConstantesLead__c/fields/PrazoNotificacaoTempoFila__c.field-meta.xml
<CustomField>
    <fullName>PrazoNotificacaoTempoFila__c</fullName>
    <label>Prazo para notificação de tempo na fila</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>