force-app/main/default/objects/ConstantesLead__c/fields/TempoTrabalharLead__c.field-meta.xml
<CustomField>
    <fullName>TempoTrabalharLead__c</fullName>
    <description>Tempo em minutos para definir um lead como qualificado ou desqualificado desde sua criação</description>
    <label>Tempo para trabalhar Lead</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>